// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders all typography components with the expected spacing classes 1`] = `
<div
  class="Typography"
  data-test-id="cf-ui-text-container"
>
  <h1
    class="DisplayText DisplayText--default f36-margin-bottom--l"
    data-test-id="cf-ui-display-text"
  >
    My DisplayText
  </h1>
  <h1
    class="Heading f36-margin-bottom--m"
    data-test-id="cf-ui-heading"
  >
    My Heading
  </h1>
  <p
    class="Paragraph f36-margin-bottom--m"
    data-test-id="cf-ui-paragraph"
  >
    My Paragraph
  </p>
  <h3
    class="SectionHeading f36-margin-bottom--l"
    data-test-id="cf-ui-section-heading"
  >
    My SectionHeading
  </h3>
  <h2
    class="Subheading f36-margin-bottom--m"
    data-test-id="cf-ui-subheading"
  >
    My Subheading
  </h2>
</div>
`;

exports[`renders the component 1`] = `
<div
  class="Typography"
  data-test-id="cf-ui-text-container"
>
  <h1
    class="Heading f36-margin-bottom--m"
    data-test-id="cf-ui-heading"
  >
    My Heading
  </h1>
  <p
    class="Paragraph f36-margin-bottom--m"
    data-test-id="cf-ui-paragraph"
  >
    My Paragraph
  </p>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  class="Typography my-extra-class"
  data-test-id="cf-ui-text-container"
>
  <h1
    class="Heading f36-margin-bottom--m"
    data-test-id="cf-ui-heading"
  >
    My Heading
  </h1>
  <p
    class="Paragraph f36-margin-bottom--m"
    data-test-id="cf-ui-paragraph"
  >
    My Paragraph
  </p>
</div>
`;
